fix for bubble display, width too wide, created visual bugs, text was too far to the right

--- a/Web/HereApi/index.css
+++ b/Web/HereApi/index.css
@@ -11,7 +11,7 @@ body {
 }
 
 .info-bubble {
-    width: 15em;
+    width: 12em;
     opacity: 0.75;
     padding: 0 5px;
     pointer-events: none;
